force-app/main/default/objects/Proforma_Invoice__c/Proforma_Invoice__c.object-meta.xml
<CustomObject>
    <label>Renewal Letter</label>
    <nameField>
        <displayFormat>RL-{0000000}</displayFormat>
        <label>Renewal Letter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>