force-app/main/default/objects/Proforma_Invoice__c/fields/AVA_SalesTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>AVA_SalesTaxAmount__c</fullName>
    <description>BIZ-63814</description>
    <formula>IF( ISBLANK(Renewal_Quote__r.AVA_SFCPQ__SalesTaxAmount__c),0, Renewal_Quote__r.AVA_SFCPQ__SalesTaxAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVA_SalesTaxAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>