force-app/main/default/objects/Proforma_Invoice__c/fields/Business_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Business_Identifier__c</fullName>
    <description>Created as part of BIZ-64653</description>
    <formula>IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X01_200_Integration_Appliance_US.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X01_200_Integration_Appliance_US.Business_Identifier_Block__c,IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X05_400_TFG_US.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X05_400_TFG_US.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X05_400_TFG_US.EIN_VAT__c,
IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X06_700_Rekoop_Limited_UK.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X06_700_Rekoop_Limited_UK.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X06_700_Rekoop_Limited_UK.EIN_VAT__c,IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X18_DealCloud.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X18_DealCloud.Business_Identifier_Block__c,
IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X23_Gwabbit.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X23_Gwabbit.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X23_Gwabbit.EIN_VAT__c,
IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X35_Repstor_Limited.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X35_Repstor_Limited.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X35_Repstor_Limited.EIN_VAT__c,
IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X37_Repstor_Inc.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X37_Repstor_Inc.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X37_Repstor_Inc.EIN_VAT__c,
IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X42_Paragon_Data_Labs.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X42_Paragon_Data_Labs.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X42_Paragon_Data_Labs.EIN_VAT__c,
IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X44_Intapp_Germany_GmbH.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X44_Intapp_Germany_GmbH.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X44_Intapp_Germany_GmbH.EIN_VAT__c,
IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X46_Intapp_Netherlands_B_V.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X46_Intapp_Netherlands_B_V.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X46_Intapp_Netherlands_B_V.EIN_VAT__c,IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X40_Intapp_Ireland_Limited.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X40_Intapp_Ireland_Limited.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X40_Intapp_Ireland_Limited.EIN_VAT__c,IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X28_Intapp_Singapore_Pte_Ltd.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X28_Intapp_Singapore_Pte_Ltd.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X28_Intapp_Singapore_Pte_Ltd.EIN_VAT__c,IF(TEXT(Renewal_Quote__r.Subsidiary__c)==$CustomMetadata.Subsidiary_Business_Identifier__mdt.X50_TermSheet.Subsidiary__c,$CustomMetadata.Subsidiary_Business_Identifier__mdt.X50_TermSheet.Prefix__c+$CustomMetadata.Subsidiary_Business_Identifier__mdt.X50_TermSheet.EIN_VAT__c,&apos;&apos;)))))))))))))</formula>
    <label>Business Identifier</label>
    <type>Text</type>
</CustomField>