force-app/main/default/objects/Proforma_Invoice__c/fields/Intapp_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Account_Number__c</fullName>
    <description>Created it as part of BIZ-74986.</description>
    <formula>Renewal_Quote__r.SBQQ__Account__r.IntApp_Account_Number__c</formula>
    <label>Intapp Account Number</label>
    <type>Text</type>
</CustomField>