force-app/main/default/objects/Proforma_Invoice__c/fields/Order_Activated__c.field-meta.xml
<CustomField>
    <fullName>Order_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Activated</label>
    <type>Checkbox</type>
</CustomField>