force-app/main/default/objects/Proforma_Invoice__c/fields/Send_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Send_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field when set to true from flow Renewal Letter Adjustments will send the Invoice Performa immediately to Customer.</description>
    <label>Send Immediately</label>
    <type>Checkbox</type>
</CustomField>