force-app/main/default/objects/Proforma_Invoice__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>This field holds the information regarding the current state of renewal letter. This is primarily set in the Auto Renewal flow.
BIZ-66216</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>