force-app/main/default/objects/Proforma_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Payment received</fullName>
            </value>
            <value>
                <fullName>Working with Customer for changes</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Payment Allocated</fullName>
            </value>
            <value>
                <fullName>No Response from Customer</fullName>
                <isActive>false</isActive>
                <label>No Response from Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>