force-app/main/default/objects/Proforma_Invoice__c/listViews/All_PAF.listView-meta.xml
<ListView>
    <fullName>All_PAF</fullName>
    <columns>NAME</columns>
    <columns>Activity_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Proforma_Invoice_Document__c</columns>
    <columns>Status__c</columns>
    <columns>Renewal_Quote__c</columns>
    <columns>Renewal_Start_Date__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All PAF</label>
    <language>en_US</language>
</ListView>